# ROS2-Dobot

./: README.md
lab2/: package.xml  setup.cfg  setup.py
lab2/lab2/: tower_maker.py
lab2/launch/: lab2_launch.py
lab3/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg
lab3/launch/: display.launch.py  lab3.launch.py
lab3/meshes/: l_finger.dae  l_finger_tip.dae
lab3/rviz/: lab3.rviz  urdf.rviz
lab3/scripts/: ForwardKin.py
lab3/urdf/: 05-visual.urdf  06-flexible.urdf  07-physics.urdf  08-macroed.urdf.xacro  lab3.urdf.xacro
lab4/: CMakeLists.txt  package.xml
lab4/config/: lab4_config.yaml
lab4/launch/: lab4_launch.py
lab4/rviz/: lab4.rviz
lab4/scripts/: DobotKin.py  DobotMover.py
lab4/urdf/: lab4.urdf.xacro
